# mcdec

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/mcd/: Cargo.toml  README.md
crates/mcd-traits/: Cargo.toml
crates/mcd-traits/src/: lib.rs
crates/mcd/src/: lib.rs  sourcedata.rs
crates/mcd/src/disassembler/: mod.rs
crates/mcd/src/ssa/: mod.rs
crates/prgparser/: Cargo.toml  README.md
crates/prgparser/src/: addressed_container.rs  binary_reader.rs  constants.rs  lib.rs  opcodes.rs
crates/prgparser/src/sections/: code.rs  data.rs  devsig.rs  entrypoints.rs  exceptions.rs  header.rs  imports.rs  mod.rs  pctolinenum.rs  permissions.rs  resources.rs  settings.rs  symbols.rs  uuid.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  main.rs  model.rs
crates/tui/src/renderers/: arrow_drawing.rs  mod.rs
crates/tui/src/ui/: code_listing_tab.rs  mod.rs  popups.rs  symbols_tab.rs
crates/tui/tests/: corpus.rs
tests/mcd-tests/: Cargo.toml
tests/mcd-tests/tests/: test-battery-old.rs
